tests/toy/pos/000102_cdrc2.toylang
program a = { if 0 then if a then sleep else sleep; } .
