tests/toy/neg/001019_mutation.toylang
program a = { if a then sleep else a sleep; } .
